--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,24 @@
         android:theme="@style/Theme.Vesalius"
         tools:targetApi="31">
         <activity
+            android:name=".AssuntoQuiz"
+            android:exported="false" />
+        <activity
+            android:name=".QuizInicio"
+            android:exported="false" />
+        <activity
+            android:name=".ComoJogarView"
+            android:exported="false" />
+        <activity
+            android:name=".ConteudoView"
+            android:exported="false" />
+        <activity
+            android:name=".QuizAlunoAcompanhadoView"
+            android:exported="false" />
+        <activity
+            android:name=".CriarConteudoProfView"
+            android:exported="false" />
+        <activity
             android:name=".CodigoSalaView"
             android:exported="false" />
         <activity
