--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,24 @@
         android:theme="@style/Theme.Vesalius"
         tools:targetApi="31">
         <activity
+            android:name=".CriarConteudoView"
+            android:exported="false" />
+        <activity
+            android:name=".SalaProfessorView"
+            android:exported="false" />
+        <activity
+            android:name=".RankingQuizView"
+            android:exported="false" />
+        <activity
+            android:name=".FinalQuizView"
+            android:exported="false" />
+        <activity
+            android:name=".QuestaoQuizView"
+            android:exported="false" />
+        <activity
+            android:name=".QuizSelecionadoView"
+            android:exported="false" />
+        <activity
             android:name=".AssuntoQuiz"
             android:exported="false" />
         <activity
