--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Vesalius"
         tools:targetApi="31">
         <activity
+            android:name=".EscolherAssuntoQuiz"
+            android:exported="false" />
+        <activity
             android:name=".PerfilProfView"
             android:exported="false" />
         <!--
