--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,9 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
-
+        ndk {
+            abiFilters  "armeabi-v7a", "arm64-v8a"
+        }
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -61,6 +63,10 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //ar
+    implementation project(':unityLibrary')
+    implementation fileTree(dir: project(':unityLibrary').getProjectDir().toString() + ('\\libs'), include: ['*.jar'])
 
 
 }
