--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.vesalius">
+    package="com.example.vesalius" >
 
     <application
         android:allowBackup="true"
@@ -12,7 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Vesalius"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".UnityHolderActivity"
+            android:exported="false" />
         <activity
             android:name=".ResultActivity"
             android:exported="false" />
@@ -50,9 +53,7 @@
         <activity
             android:name=".RankingQuizView"
             android:exported="false" />
-        <activity
-            android:name=".FinalQuizView"
-            android:exported="false" />
+
         <activity
             android:name=".QuestaoQuizView"
             android:exported="false" />
@@ -125,7 +126,7 @@
             android:exported="false" />
         <activity
             android:name=".SplashScreenView"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
