--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.vesalius" >
+    package="com.example.vesalius">
 
     <application
         android:allowBackup="true"
@@ -12,7 +12,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Vesalius"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".NovaNota"
+            android:exported="false" />
+        <activity
+            android:name=".Anotacoes"
+            android:exported="false" />
         <activity
             android:name=".UnityHolderActivity"
             android:exported="false" />
@@ -53,7 +59,6 @@
         <activity
             android:name=".RankingQuizView"
             android:exported="false" />
-
         <activity
             android:name=".QuestaoQuizView"
             android:exported="false" />
@@ -126,7 +131,7 @@
             android:exported="false" />
         <activity
             android:name=".SplashScreenView"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
